// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SankeyContainer mapStateToProps 1`] = `
Object {
  "data": Object {
    "error": false,
    "loading": false,
    "mapbox": Object {
      "iconAtlas": "data/location-icon-atlas.png",
      "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
      "preventStyleDiffing": false,
      "showCluster": "true",
      "showZoomControls": true,
    },
    "region": Object {
      "id": "belgium",
      "mapbox": Object {
        "viewport": Object {
          "latitude": 50.5915,
          "longitude": 2.0165,
          "zoom": 7,
        },
      },
      "name": "Belgium",
    },
    "settings": Object {
      "api": Object {
        "host": "localhost",
        "port": "3000",
        "protocol": "http",
        "root": "/graphql/",
      },
      "cycle": Object {
        "drivers": Object {
          "api": "HTTP",
        },
      },
      "domain": "localhost",
      "graphcool": Object {
        "authTokenKey": "graphcool-auth-token",
        "linksPerPage": 5,
        "serviceIdKey": "cjajyycub38710185wt87zsm8",
        "userId": "graphcool-user-id",
      },
      "mapbox": Object {
        "iconAtlas": "data/location-icon-atlas.png",
        "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
        "preventStyleDiffing": false,
        "showCluster": "true",
        "showZoomControls": true,
      },
      "markers": Object {},
      "overpass": Object {
        "cellSize": 100,
        "sleepBetweenCalls": 1000,
      },
    },
    "store": Object {
      "region": Object {
        "geojson": Object {
          "osm": Object {
            "features": Array [
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    Array [
                      2.3372032,
                      48.8404254,
                    ],
                    Array [
                      2.3372715,
                      48.8406677,
                    ],
                    Array [
                      2.3373962,
                      48.8410543,
                    ],
                    Array [
                      2.3380024,
                      48.8422009,
                    ],
                    Array [
                      2.3385107,
                      48.8431117,
                    ],
                    Array [
                      2.3389787,
                      48.8439785,
                    ],
                    Array [
                      2.3392577,
                      48.8444515,
                    ],
                    Array [
                      2.3402917,
                      48.8463852,
                    ],
                    Array [
                      2.3405962,
                      48.8469464,
                    ],
                    Array [
                      2.3407859,
                      48.8472594,
                    ],
                    Array [
                      2.3411775,
                      48.8479028,
                    ],
                    Array [
                      2.3422987,
                      48.8497393,
                    ],
                    Array [
                      2.34276,
                      48.8507232,
                    ],
                    Array [
                      2.3429223,
                      48.8510339,
                    ],
                    Array [
                      2.3430309,
                      48.8511954,
                    ],
                    Array [
                      2.3432019,
                      48.8514041,
                    ],
                    Array [
                      2.3434513,
                      48.851675,
                    ],
                    Array [
                      2.3436619,
                      48.851859,
                    ],
                    Array [
                      2.3439871,
                      48.8520933,
                    ],
                    Array [
                      2.3443787,
                      48.8523492,
                    ],
                    Array [
                      2.3447636,
                      48.8525821,
                    ],
                    Array [
                      2.3454415,
                      48.8529788,
                    ],
                    Array [
                      2.3458338,
                      48.8532131,
                    ],
                    Array [
                      2.346153,
                      48.8534072,
                    ],
                    Array [
                      2.3465238,
                      48.8536327,
                    ],
                    Array [
                      2.3468805,
                      48.8538939,
                    ],
                    Array [
                      2.3472815,
                      48.8542327,
                    ],
                    Array [
                      2.3476597,
                      48.8546377,
                    ],
                  ],
                  "type": "LineString",
                },
                "id": "way/29735335",
                "properties": Object {
                  "@changeset": "40980697",
                  "@id": "way/29735335",
                  "@timestamp": "2016-07-23T22:33:32Z",
                  "@uid": "158826",
                  "@user": "cquest",
                  "@version": "34",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-5",
                  "name": "RER B",
                  "operator": "RATP",
                  "railway": "rail",
                  "source": "STIF",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    Array [
                      2.3580437,
                      48.8489285,
                    ],
                    Array [
                      2.3569883,
                      48.8493417,
                    ],
                    Array [
                      2.3566417,
                      48.8494774,
                    ],
                    Array [
                      2.3498091,
                      48.8517476,
                    ],
                    Array [
                      2.3481873,
                      48.85241,
                    ],
                    Array [
                      2.3468858,
                      48.8530098,
                    ],
                    Array [
                      2.3465228,
                      48.8531476,
                    ],
                    Array [
                      2.3454232,
                      48.8534731,
                    ],
                  ],
                  "type": "LineString",
                },
                "id": "way/334870919",
                "properties": Object {
                  "@changeset": "34996941",
                  "@id": "way/334870919",
                  "@timestamp": "2015-10-31T17:43:46Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "4",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-1",
                  "maxspeed": "60",
                  "name": "RER C - Ligne de Musée d'Orsay à Austerlitz",
                  "railway": "rail",
                  "tracks": "2",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    Array [
                      2.3454232,
                      48.8534731,
                    ],
                    Array [
                      2.344675,
                      48.8536946,
                    ],
                    Array [
                      2.3440745,
                      48.8539094,
                    ],
                    Array [
                      2.343693,
                      48.8540843,
                    ],
                    Array [
                      2.3431388,
                      48.854372,
                    ],
                    Array [
                      2.342491,
                      48.8547437,
                    ],
                    Array [
                      2.3402755,
                      48.8563525,
                    ],
                    Array [
                      2.3379956,
                      48.8575207,
                    ],
                    Array [
                      2.3329547,
                      48.8584095,
                    ],
                    Array [
                      2.3275778,
                      48.8601289,
                    ],
                  ],
                  "type": "LineString",
                },
                "id": "way/377746412",
                "properties": Object {
                  "@changeset": "34996941",
                  "@id": "way/377746412",
                  "@timestamp": "2015-10-31T17:43:41Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "1",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-1",
                  "maxspeed": "50",
                  "name": "RER C - Ligne de Musée d'Orsay à Austerlitz",
                  "railway": "rail",
                  "tracks": "2",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    2.3454363,
                    48.8534806,
                  ],
                  "type": "Point",
                },
                "id": "node/3572156993",
                "properties": Object {
                  "@changeset": "42352341",
                  "@id": "node/3572156993",
                  "@timestamp": "2016-09-22T16:51:49Z",
                  "@uid": "1429581",
                  "@user": "Guillaume Mortier",
                  "@version": "3",
                  "STIF:zone": "1",
                  "name": "Saint-Michel Notre-Dame",
                  "official_name": "ST MICHEL NOTRE DAME",
                  "operator": "SNCF;RATP",
                  "railway": "station",
                  "ref": "RER B, C",
                  "ref:FR:RATP": "5604",
                  "ref:FR:uic8": "87547315;87785436",
                  "ref:SNCF": "RER",
                  "ref:SNCF:RER": "C",
                  "type:RATP": "rer",
                  "uic_ref": "8754731;8778543",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare Saint-Michel - Notre-Dame",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    2.3402917,
                    48.8463852,
                  ],
                  "type": "Point",
                },
                "id": "node/327432589",
                "properties": Object {
                  "@changeset": "40980697",
                  "@id": "node/327432589",
                  "@timestamp": "2016-07-23T22:33:35Z",
                  "@uid": "158826",
                  "@user": "cquest",
                  "@version": "12",
                  "STIF:zone": "1",
                  "name": "Luxembourg",
                  "operator": "RATP",
                  "railway": "station",
                  "ref": "RER B",
                  "ref:FR:RATP": "1811",
                  "type:RATP": "rer",
                  "uic_ref": "8775861",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare du Luxembourg",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    2.346153,
                    48.8534072,
                  ],
                  "type": "Point",
                },
                "id": "node/270191809",
                "properties": Object {
                  "@changeset": "42352341",
                  "@id": "node/270191809",
                  "@timestamp": "2016-09-22T16:51:50Z",
                  "@uid": "1429581",
                  "@user": "Guillaume Mortier",
                  "@version": "29",
                  "STIF:zone": "1",
                  "name": "Saint-Michel Notre-Dame",
                  "official_name": "ST MICHEL NOTRE DAME",
                  "operator": "SNCF;RATP",
                  "public_transport": "stop_position",
                  "railway": "stop",
                  "ref": "RER B, C",
                  "ref:FR:RATP": "5604",
                  "ref:FR:uic8": "87547315;87785436",
                  "ref:SNCF": "RER",
                  "ref:SNCF:RER": "C",
                  "type:RATP": "rer",
                  "uic_ref": "8754731;8778543",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare Saint-Michel - Notre-Dame",
                },
                "type": "Feature",
              },
              Object {
                "geometry": Object {
                  "coordinates": Array [
                    2.3569883,
                    48.8493417,
                  ],
                  "type": "Point",
                },
                "id": "node/3809893083",
                "properties": Object {
                  "@changeset": "34971642",
                  "@id": "node/3809893083",
                  "@timestamp": "2015-10-30T12:46:44Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "1",
                  "highway": "crossing",
                },
                "type": "Feature",
              },
            ],
          },
          "sankey": Object {
            "graph": Object {
              "links": Array [
                Object {
                  "source": 0,
                  "target": 1,
                  "value": 22469843,
                },
                Object {
                  "source": 1,
                  "target": 2,
                  "value": 657245,
                },
                Object {
                  "source": 2,
                  "target": 3,
                  "value": 18632,
                },
                Object {
                  "source": 2,
                  "target": 4,
                  "value": 18632,
                },
                Object {
                  "source": 2,
                  "target": 5,
                  "value": 18632,
                },
                Object {
                  "source": 3,
                  "target": 6,
                  "value": 3882735,
                },
                Object {
                  "source": 4,
                  "target": 6,
                  "value": 13544,
                },
                Object {
                  "source": 5,
                  "target": 6,
                  "value": 34643,
                },
                Object {
                  "source": 6,
                  "target": 7,
                  "value": 87565,
                },
                Object {
                  "source": 6,
                  "target": 8,
                  "value": 87565,
                },
                Object {
                  "source": 6,
                  "target": 9,
                  "value": 87565,
                },
              ],
              "nodes": Array [
                Object {
                  "annualTonnage": "22,469,843",
                  "coordinates": "51.309933, 3.055030",
                  "geometry": Object {
                    "coordinates": Array [
                      3.05503,
                      51.309933,
                    ],
                    "type": "Point",
                  },
                  "index": 0,
                  "isGeneralized": false,
                  "junctionStage": "Source",
                  "location": "Shipments, location generalized",
                  "material": "Minerals",
                  "siteName": "Other Global Imports",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "657,245",
                  "coordinates": "50.864762, 3.479308",
                  "geometry": Object {
                    "coordinates": Array [
                      3.479308,
                      50.864762,
                    ],
                    "type": "Point",
                  },
                  "index": 1,
                  "isGeneralized": false,
                  "junctionStage": "Conversion",
                  "location": "Waregemseweg 156-142 9790 Wortegem-Petegem, Belgium",
                  "material": "Minerals",
                  "siteName": "Knauf (Danilith) BE",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "18,632",
                  "coordinates": "50.867486, 4.352543",
                  "geometry": Object {
                    "coordinates": Array [
                      4.352543,
                      50.867486,
                    ],
                    "type": "Point",
                  },
                  "index": 2,
                  "isGeneralized": false,
                  "junctionStage": "Distribution",
                  "location": "Avenue du Port 67 1000 Bruxelles, Belgium",
                  "material": "Minerals",
                  "siteName": "MPRO Bruxelles",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "3,882,735",
                  "coordinates": "NA",
                  "geometry": Object {
                    "coordinates": Array [
                      4.3817,
                      50.820299999999996,
                    ],
                    "type": "Point",
                  },
                  "index": 3,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Residential Buildings (all typologies)",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "13,544",
                  "coordinates": "NA",
                  "geometry": Object {
                    "coordinates": Array [
                      4.3117,
                      50.890299999999996,
                    ],
                    "type": "Point",
                  },
                  "index": 4,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Duplex House Typology",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "34,643",
                  "coordinates": "NA",
                  "geometry": Object {
                    "coordinates": Array [
                      4.4017,
                      50.8003,
                    ],
                    "type": "Point",
                  },
                  "index": 5,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Apartment Building Typology",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "87,565",
                  "coordinates": "51.270229, 4.261048",
                  "geometry": Object {
                    "coordinates": Array [
                      4.261048,
                      51.270229,
                    ],
                    "type": "Point",
                  },
                  "index": 6,
                  "isGeneralized": false,
                  "junctionStage": "Reconversion",
                  "location": "9130 Beveren, Sint-Jansweg 9 Haven 1602, Kallo, Belgium",
                  "material": "Minerals",
                  "siteName": "New West Gypsum Recycling",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "120,000",
                  "coordinates": "NA",
                  "geometry": Object {
                    "coordinates": Array [
                      4.4217,
                      50.7803,
                    ],
                    "type": "Point",
                  },
                  "index": 7,
                  "isGeneralized": true,
                  "junctionStage": "Sink",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Residential Buildings (all typologies)",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "3,130",
                  "coordinates": "50.810799, 4.314789",
                  "geometry": Object {
                    "coordinates": Array [
                      4.314789,
                      50.810799,
                    ],
                    "type": "Point",
                  },
                  "index": 8,
                  "isGeneralized": false,
                  "junctionStage": "Sink",
                  "location": "1190 Forest, Belgium",
                  "material": "Minerals",
                  "siteName": "RecyPark South",
                  "type": "Feature",
                },
                Object {
                  "annualTonnage": "1,162",
                  "coordinates": "50.880181, 4.377136",
                  "geometry": Object {
                    "coordinates": Array [
                      4.377136,
                      50.880181,
                    ],
                    "type": "Point",
                  },
                  "index": 9,
                  "isGeneralized": false,
                  "junctionStage": "Sink",
                  "location": "Rue du Rupel, 1000 Bruxelles, Belgium",
                  "material": "Minerals",
                  "siteName": "RecyPark Nord",
                  "type": "Feature",
                },
              ],
            },
          },
        },
        "id": "belgium",
      },
    },
    "user": Object {
      "id": "belgiumManager",
      "isActive": true,
      "name": "Belgium Manager",
      "permissions": Array [
        "manage",
      ],
      "regions": Array [
        Object {
          "id": "belgium",
          "isSelected": true,
        },
      ],
    },
    "viewport": Object {
      "bearing": 0,
      "isDragging": false,
      "latitude": 50.5915,
      "longitude": 2.0165,
      "pitch": 0,
      "startDragLngLat": null,
      "zoom": 7,
    },
  },
  "onViewportChange": [Function],
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "color": "black",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": -130,
    "textDecoration": "none",
    "width": -32,
  },
}
`;

exports[`SankeyContainer query 1`] = `
Object {
  "data": Object {
    "store": Object {
      "__typename": "Store",
      "region": Object {
        "__typename": "Region",
        "geojson": Object {
          "__typename": "Geojson",
          "osm": Object {
            "__typename": "OpenStreetMap",
            "features": Array [
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONLineString",
                  "coordinates": Array [
                    Array [
                      2.3372032,
                      48.8404254,
                    ],
                    Array [
                      2.3372715,
                      48.8406677,
                    ],
                    Array [
                      2.3373962,
                      48.8410543,
                    ],
                    Array [
                      2.3380024,
                      48.8422009,
                    ],
                    Array [
                      2.3385107,
                      48.8431117,
                    ],
                    Array [
                      2.3389787,
                      48.8439785,
                    ],
                    Array [
                      2.3392577,
                      48.8444515,
                    ],
                    Array [
                      2.3402917,
                      48.8463852,
                    ],
                    Array [
                      2.3405962,
                      48.8469464,
                    ],
                    Array [
                      2.3407859,
                      48.8472594,
                    ],
                    Array [
                      2.3411775,
                      48.8479028,
                    ],
                    Array [
                      2.3422987,
                      48.8497393,
                    ],
                    Array [
                      2.34276,
                      48.8507232,
                    ],
                    Array [
                      2.3429223,
                      48.8510339,
                    ],
                    Array [
                      2.3430309,
                      48.8511954,
                    ],
                    Array [
                      2.3432019,
                      48.8514041,
                    ],
                    Array [
                      2.3434513,
                      48.851675,
                    ],
                    Array [
                      2.3436619,
                      48.851859,
                    ],
                    Array [
                      2.3439871,
                      48.8520933,
                    ],
                    Array [
                      2.3443787,
                      48.8523492,
                    ],
                    Array [
                      2.3447636,
                      48.8525821,
                    ],
                    Array [
                      2.3454415,
                      48.8529788,
                    ],
                    Array [
                      2.3458338,
                      48.8532131,
                    ],
                    Array [
                      2.346153,
                      48.8534072,
                    ],
                    Array [
                      2.3465238,
                      48.8536327,
                    ],
                    Array [
                      2.3468805,
                      48.8538939,
                    ],
                    Array [
                      2.3472815,
                      48.8542327,
                    ],
                    Array [
                      2.3476597,
                      48.8546377,
                    ],
                  ],
                  "type": "LineString",
                  Symbol(id): "$geojsonFeature:way/29735335.geometry",
                },
                "id": "way/29735335",
                "properties": Object {
                  "@changeset": "40980697",
                  "@id": "way/29735335",
                  "@timestamp": "2016-07-23T22:33:32Z",
                  "@uid": "158826",
                  "@user": "cquest",
                  "@version": "34",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-5",
                  "name": "RER B",
                  "operator": "RATP",
                  "railway": "rail",
                  "source": "STIF",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:way/29735335",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONLineString",
                  "coordinates": Array [
                    Array [
                      2.3580437,
                      48.8489285,
                    ],
                    Array [
                      2.3569883,
                      48.8493417,
                    ],
                    Array [
                      2.3566417,
                      48.8494774,
                    ],
                    Array [
                      2.3498091,
                      48.8517476,
                    ],
                    Array [
                      2.3481873,
                      48.85241,
                    ],
                    Array [
                      2.3468858,
                      48.8530098,
                    ],
                    Array [
                      2.3465228,
                      48.8531476,
                    ],
                    Array [
                      2.3454232,
                      48.8534731,
                    ],
                  ],
                  "type": "LineString",
                  Symbol(id): "$geojsonFeature:way/334870919.geometry",
                },
                "id": "way/334870919",
                "properties": Object {
                  "@changeset": "34996941",
                  "@id": "way/334870919",
                  "@timestamp": "2015-10-31T17:43:46Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "4",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-1",
                  "maxspeed": "60",
                  "name": "RER C - Ligne de Musée d'Orsay à Austerlitz",
                  "railway": "rail",
                  "tracks": "2",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:way/334870919",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONLineString",
                  "coordinates": Array [
                    Array [
                      2.3454232,
                      48.8534731,
                    ],
                    Array [
                      2.344675,
                      48.8536946,
                    ],
                    Array [
                      2.3440745,
                      48.8539094,
                    ],
                    Array [
                      2.343693,
                      48.8540843,
                    ],
                    Array [
                      2.3431388,
                      48.854372,
                    ],
                    Array [
                      2.342491,
                      48.8547437,
                    ],
                    Array [
                      2.3402755,
                      48.8563525,
                    ],
                    Array [
                      2.3379956,
                      48.8575207,
                    ],
                    Array [
                      2.3329547,
                      48.8584095,
                    ],
                    Array [
                      2.3275778,
                      48.8601289,
                    ],
                  ],
                  "type": "LineString",
                  Symbol(id): "$geojsonFeature:way/377746412.geometry",
                },
                "id": "way/377746412",
                "properties": Object {
                  "@changeset": "34996941",
                  "@id": "way/377746412",
                  "@timestamp": "2015-10-31T17:43:41Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "1",
                  "electrified": "contact_line",
                  "frequency": "0",
                  "gauge": "1435",
                  "importance": "regional",
                  "layer": "-1",
                  "maxspeed": "50",
                  "name": "RER C - Ligne de Musée d'Orsay à Austerlitz",
                  "railway": "rail",
                  "tracks": "2",
                  "tunnel": "yes",
                  "usage": "main",
                  "voltage": "1500",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:way/377746412",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONPoint",
                  "coordinates": Array [
                    2.3454363,
                    48.8534806,
                  ],
                  "type": "Point",
                  Symbol(id): "$geojsonFeature:node/3572156993.geometry",
                },
                "id": "node/3572156993",
                "properties": Object {
                  "@changeset": "42352341",
                  "@id": "node/3572156993",
                  "@timestamp": "2016-09-22T16:51:49Z",
                  "@uid": "1429581",
                  "@user": "Guillaume Mortier",
                  "@version": "3",
                  "STIF:zone": "1",
                  "name": "Saint-Michel Notre-Dame",
                  "official_name": "ST MICHEL NOTRE DAME",
                  "operator": "SNCF;RATP",
                  "railway": "station",
                  "ref": "RER B, C",
                  "ref:FR:RATP": "5604",
                  "ref:FR:uic8": "87547315;87785436",
                  "ref:SNCF": "RER",
                  "ref:SNCF:RER": "C",
                  "type:RATP": "rer",
                  "uic_ref": "8754731;8778543",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare Saint-Michel - Notre-Dame",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:node/3572156993",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONPoint",
                  "coordinates": Array [
                    2.3402917,
                    48.8463852,
                  ],
                  "type": "Point",
                  Symbol(id): "$geojsonFeature:node/327432589.geometry",
                },
                "id": "node/327432589",
                "properties": Object {
                  "@changeset": "40980697",
                  "@id": "node/327432589",
                  "@timestamp": "2016-07-23T22:33:35Z",
                  "@uid": "158826",
                  "@user": "cquest",
                  "@version": "12",
                  "STIF:zone": "1",
                  "name": "Luxembourg",
                  "operator": "RATP",
                  "railway": "station",
                  "ref": "RER B",
                  "ref:FR:RATP": "1811",
                  "type:RATP": "rer",
                  "uic_ref": "8775861",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare du Luxembourg",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:node/327432589",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONPoint",
                  "coordinates": Array [
                    2.346153,
                    48.8534072,
                  ],
                  "type": "Point",
                  Symbol(id): "$geojsonFeature:node/270191809.geometry",
                },
                "id": "node/270191809",
                "properties": Object {
                  "@changeset": "42352341",
                  "@id": "node/270191809",
                  "@timestamp": "2016-09-22T16:51:50Z",
                  "@uid": "1429581",
                  "@user": "Guillaume Mortier",
                  "@version": "29",
                  "STIF:zone": "1",
                  "name": "Saint-Michel Notre-Dame",
                  "official_name": "ST MICHEL NOTRE DAME",
                  "operator": "SNCF;RATP",
                  "public_transport": "stop_position",
                  "railway": "stop",
                  "ref": "RER B, C",
                  "ref:FR:RATP": "5604",
                  "ref:FR:uic8": "87547315;87785436",
                  "ref:SNCF": "RER",
                  "ref:SNCF:RER": "C",
                  "type:RATP": "rer",
                  "uic_ref": "8754731;8778543",
                  "wheelchair": "yes",
                  "wikipedia": "fr:Gare Saint-Michel - Notre-Dame",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:node/270191809",
              },
              Object {
                "__typename": "geojsonFeature",
                "geometry": Object {
                  "__typename": "GeoJSONPoint",
                  "coordinates": Array [
                    2.3569883,
                    48.8493417,
                  ],
                  "type": "Point",
                  Symbol(id): "$geojsonFeature:node/3809893083.geometry",
                },
                "id": "node/3809893083",
                "properties": Object {
                  "@changeset": "34971642",
                  "@id": "node/3809893083",
                  "@timestamp": "2015-10-30T12:46:44Z",
                  "@uid": "53964",
                  "@user": "_Mathieu_",
                  "@version": "1",
                  "highway": "crossing",
                },
                "type": "Feature",
                Symbol(id): "geojsonFeature:node/3809893083",
              },
            ],
            Symbol(id): "$Region:belgium.geojson.osm",
          },
          "sankey": Object {
            "__typename": "Sankey",
            "graph": Object {
              "__typename": "SankeyGraph",
              "links": Array [
                Object {
                  "__typename": "SankeyLink",
                  "source": 0,
                  "target": 1,
                  "value": 22469843,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.0",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 1,
                  "target": 2,
                  "value": 657245,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.1",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 2,
                  "target": 3,
                  "value": 18632,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.2",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 2,
                  "target": 4,
                  "value": 18632,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.3",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 2,
                  "target": 5,
                  "value": 18632,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.4",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 3,
                  "target": 6,
                  "value": 3882735,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.5",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 4,
                  "target": 6,
                  "value": 13544,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.6",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 5,
                  "target": 6,
                  "value": 34643,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.7",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 6,
                  "target": 7,
                  "value": 87565,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.8",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 6,
                  "target": 8,
                  "value": 87565,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.9",
                },
                Object {
                  "__typename": "SankeyLink",
                  "source": 6,
                  "target": 9,
                  "value": 87565,
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.links.10",
                },
              ],
              "nodes": Array [
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "22,469,843",
                  "coordinates": "51.309933, 3.055030",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      3.05503,
                      51.309933,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.0.geometry",
                  },
                  "index": 0,
                  "isGeneralized": false,
                  "junctionStage": "Source",
                  "location": "Shipments, location generalized",
                  "material": "Minerals",
                  "siteName": "Other Global Imports",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.0",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "657,245",
                  "coordinates": "50.864762, 3.479308",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      3.479308,
                      50.864762,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.1.geometry",
                  },
                  "index": 1,
                  "isGeneralized": false,
                  "junctionStage": "Conversion",
                  "location": "Waregemseweg 156-142 9790 Wortegem-Petegem, Belgium",
                  "material": "Minerals",
                  "siteName": "Knauf (Danilith) BE",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.1",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "18,632",
                  "coordinates": "50.867486, 4.352543",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.352543,
                      50.867486,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.2.geometry",
                  },
                  "index": 2,
                  "isGeneralized": false,
                  "junctionStage": "Distribution",
                  "location": "Avenue du Port 67 1000 Bruxelles, Belgium",
                  "material": "Minerals",
                  "siteName": "MPRO Bruxelles",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.2",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "3,882,735",
                  "coordinates": "NA",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.3817,
                      50.820299999999996,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.3.geometry",
                  },
                  "index": 3,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Residential Buildings (all typologies)",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.3",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "13,544",
                  "coordinates": "NA",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.3117,
                      50.890299999999996,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.4.geometry",
                  },
                  "index": 4,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Duplex House Typology",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.4",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "34,643",
                  "coordinates": "NA",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.4017,
                      50.8003,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.5.geometry",
                  },
                  "index": 5,
                  "isGeneralized": true,
                  "junctionStage": "Demand",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Apartment Building Typology",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.5",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "87,565",
                  "coordinates": "51.270229, 4.261048",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.261048,
                      51.270229,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.6.geometry",
                  },
                  "index": 6,
                  "isGeneralized": false,
                  "junctionStage": "Reconversion",
                  "location": "9130 Beveren, Sint-Jansweg 9 Haven 1602, Kallo, Belgium",
                  "material": "Minerals",
                  "siteName": "New West Gypsum Recycling",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.6",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "120,000",
                  "coordinates": "NA",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.4217,
                      50.7803,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.7.geometry",
                  },
                  "index": 7,
                  "isGeneralized": true,
                  "junctionStage": "Sink",
                  "location": "Everywhere in Brussels",
                  "material": "Minerals",
                  "siteName": "Residential Buildings (all typologies)",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.7",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "3,130",
                  "coordinates": "50.810799, 4.314789",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.314789,
                      50.810799,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.8.geometry",
                  },
                  "index": 8,
                  "isGeneralized": false,
                  "junctionStage": "Sink",
                  "location": "1190 Forest, Belgium",
                  "material": "Minerals",
                  "siteName": "RecyPark South",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.8",
                },
                Object {
                  "__typename": "SankeyNode",
                  "annualTonnage": "1,162",
                  "coordinates": "50.880181, 4.377136",
                  "geometry": Object {
                    "__typename": "GeoJSONPoint",
                    "coordinates": Array [
                      4.377136,
                      50.880181,
                    ],
                    "type": "Point",
                    Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.9.geometry",
                  },
                  "index": 9,
                  "isGeneralized": false,
                  "junctionStage": "Sink",
                  "location": "Rue du Rupel, 1000 Bruxelles, Belgium",
                  "material": "Minerals",
                  "siteName": "RecyPark Nord",
                  "type": "Feature",
                  Symbol(id): "$Region:belgium.geojson.sankey.graph.nodes.9",
                },
              ],
              Symbol(id): "$Region:belgium.geojson.sankey.graph",
            },
            Symbol(id): "$Region:belgium.geojson.sankey",
          },
          Symbol(id): "$Region:belgium.geojson",
        },
        "id": "belgium",
        Symbol(id): "Region:belgium",
      },
      Symbol(id): "$ROOT_QUERY.store",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`SankeyContainer render 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "mapbox": Object {
      "iconAtlas": "data/location-icon-atlas.png",
      "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
      "preventStyleDiffing": false,
      "showCluster": "true",
      "showZoomControls": true,
    },
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "belgium",
      "mapbox": Object {
        "viewport": Object {
          "latitude": 50.5915,
          "longitude": 2.0165,
          "zoom": 7,
        },
      },
      "name": "Belgium",
    },
    "settings": Object {
      "api": Object {
        "host": "localhost",
        "port": "3000",
        "protocol": "http",
        "root": "/graphql/",
      },
      "cycle": Object {
        "drivers": Object {
          "api": "HTTP",
        },
      },
      "domain": "localhost",
      "graphcool": Object {
        "authTokenKey": "graphcool-auth-token",
        "linksPerPage": 5,
        "serviceIdKey": "cjajyycub38710185wt87zsm8",
        "userId": "graphcool-user-id",
      },
      "mapbox": Object {
        "iconAtlas": "data/location-icon-atlas.png",
        "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
        "preventStyleDiffing": false,
        "showCluster": "true",
        "showZoomControls": true,
      },
      "markers": Object {},
      "overpass": Object {
        "cellSize": 100,
        "sleepBetweenCalls": 1000,
      },
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "user": Object {
      "id": "belgiumManager",
      "isActive": true,
      "name": "Belgium Manager",
      "permissions": Array [
        "manage",
      ],
      "regions": Array [
        Object {
          "id": "belgium",
          "isSelected": true,
        },
      ],
    },
    "variables": Object {
      "regionId": "belgium",
    },
    "viewport": Object {
      "bearing": 0,
      "isDragging": false,
      "latitude": 50.5915,
      "longitude": 2.0165,
      "pitch": 0,
      "startDragLngLat": null,
      "zoom": 7,
    },
  },
  "onSankeyFilterChange": [Function],
  "onViewportChange": [Function],
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "color": "black",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": -130,
    "textDecoration": "none",
    "width": -32,
  },
}
`;

exports[`SankeyContainer render 2`] = `
Object {
  "captureClick": false,
  "captureDoubleClick": false,
  "captureDrag": false,
  "captureScroll": false,
  "className": "sankey-svg-overlay",
  "redraw": [Function],
  "style": Object {},
  "viewBox": "0 0 -32 -130",
}
`;

exports[`SankeyContainer renderError 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "mapbox": Object {
      "iconAtlas": "data/location-icon-atlas.png",
      "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
      "preventStyleDiffing": false,
      "showCluster": "true",
      "showZoomControls": true,
    },
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "foo",
      "mapbox": Object {
        "viewport": Object {
          "latitude": 37,
          "longitude": -119,
          "zoom": 5,
        },
      },
      "name": "Oakland",
    },
    "settings": Object {
      "api": Object {
        "host": "localhost",
        "port": "3000",
        "protocol": "http",
        "root": "/graphql/",
      },
      "cycle": Object {
        "drivers": Object {
          "api": "HTTP",
        },
      },
      "domain": "localhost",
      "graphcool": Object {
        "authTokenKey": "graphcool-auth-token",
        "linksPerPage": 5,
        "serviceIdKey": "cjajyycub38710185wt87zsm8",
        "userId": "graphcool-user-id",
      },
      "mapbox": Object {
        "iconAtlas": "data/location-icon-atlas.png",
        "mapboxApiAccessToken": "pk.eyJ1IjoiY2Fsb2NhbiIsImEiOiJjaXl1aXkxZjkwMG15MndxbmkxMHczNG50In0.07Zu3XXYijL6GJMuxFtvQg",
        "preventStyleDiffing": false,
        "showCluster": "true",
        "showZoomControls": true,
      },
      "markers": Object {},
      "overpass": Object {
        "cellSize": 100,
        "sleepBetweenCalls": 1000,
      },
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "user": Object {
      "id": "californiaManager",
      "isActive": true,
      "name": "Jerry Brown",
      "permissions": Array [
        "manage",
      ],
      "regions": Array [
        Object {
          "id": "oakland",
          "isSelected": true,
        },
      ],
    },
    "variables": Object {
      "regionId": "foo",
    },
    "viewport": Object {
      "latitude": 37,
      "longitude": -119,
      "zoom": 5,
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "border": 0,
    "color": "black",
    "display": "inline-block",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": 720,
    "margin": 0,
    "paddingBottom": 8,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 8,
    "textDecoration": "none",
    "width": 1080,
  },
}
`;
